--- a/figures/ALMA_fig2/caption.tex
+++ b/figures/ALMA_fig2/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+With ALMA it will be easily possible for galaxies at ~3 Mpc to observe their centers at parsec-scale resolution, or the resolution of existing (and planned) single-dish millimeter surveys. In our Galactic center, what can then be done is to probe inside any particularly representative or "proxy" clouds at resolutions orders of magnitude more compact than can be achieved in the more distant and extreme nuclei.
