--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -28,7 +28,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item 230 GHz SMA Legacy Survey of the CMZ (Battersby, Keto)
     \item NH3 (1,1)-(5,5) and H2O masers, GCMS (Kauffmann et al.)
     \item NH3 (1,1)-(7,7), HC3N, and CH3OH masers (Mills et al.)
-    \item ...
+    \item 220 + 290 GHz APEX observations of five/seven CMZ clouds (Immer, Kauffmann, Pillai)
 \end{itemize}
 
 {\bf Missing: 50-80 GHz, 115-210 GHz}
