--- a/Future_Meetings_Prior_to_Cycle__.tex
+++ b/Future_Meetings_Prior_to_Cycle__.tex
@@ -1,5 +1,8 @@
 Future Meetings?
 
-Prior to Cycle 4 deadline: similar meeting?
+Prior to Cycle 4 call: similar meeting?
 
 Lorentz Center?  Sexten?  Aspen?
+
+IAU 322 Australia Reefish 25-29 July 2016?
+
