--- a/Future_Meetings_Prior_to_Cycle__.tex
+++ b/Future_Meetings_Prior_to_Cycle__.tex
@@ -1,8 +1,23 @@
 Future Meetings?
 
-Prior to Cycle 4 call: similar meeting?
+Prior to Cycle 4 call: similar meeting?  20
+Where?  
 
 Lorentz Center?  Sexten?  Aspen?
 
 IAU 322 Australia Reefish 25-29 July 2016?
 
+Aspen center:
+\begin{itemize}
+\item Summer workshop deadline end of May.  Summer 2016, 40 participants.  3 weeks
+\item Winter workshop deadline January.  Winter 2016.  80 participants.  1 week
+\item Summer 2017.... deadline May 2016?
+\end{itemize}
+
+Higher energy CMZ-focused meetings:
+
+Ringberg June 5-11 
+
+COSPAR July 30-August 4?
+
+Summer 2016 - ESO Galactic star formation meeting
