--- a/Future_Meetings_Prior_to_Cycle__.tex
+++ b/Future_Meetings_Prior_to_Cycle__.tex
@@ -1,6 +1,6 @@
 Future Meetings?
 
-Prior to Cycle 4 call: similar meeting?  20
+Prior to Cycle 4 call: similar meeting?  20ish participants
 Where?  
 
 Lorentz Center?  Sexten?  Aspen?
@@ -14,10 +14,11 @@ Aspen center:
 \item Summer 2017.... deadline May 2016?
 \end{itemize}
 
-Higher energy CMZ-focused meetings:
+Sexten: Deadlines?  Times?!  Information TBD...
 
-Ringberg June 5-11 
-
-COSPAR July 30-August 4?
-
-Summer 2016 - ESO Galactic star formation meeting
+(Higher energy) CMZ-focused meetings:
+\begin{itemize}
+\item Ringberg June 5-11 
+\item COSPAR July 30-August 4?
+\item Summer 2016 - ESO Galactic star formation meeting
+\end{itemize}
