--- a/section_Key_follow_up_work__.tex
+++ b/section_Key_follow_up_work__.tex
@@ -1,7 +1,7 @@
 \section{Key follow-up work}
 \begin{itemize}
 \item Further proper motion studies.  Interested: Everyone.
-\item Large spatial scale ($b\pm1$\deg) CO mapping
+\item Large spatial scale ($b\pm1$\deg) CO mapping to test Diederik's latest theory
 \item SEPIA line surveys - what is useful in Band 5?
 \item keep an eye on the CO J=3-2 mapping projects (ongoing) - they may lead to  followup with LASMA higher-J high-density tracers?  (characterize density, temperature more accurately)
 \end{itemize}
