--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -13,6 +13,7 @@ Sorted from low to high frequency.  Probably should be a table.
     \item 42-50 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/survey.html#CMZ_7mm_Table} \citep{Jones2013}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
     \item THRUMMS, 3 mm b = $\pm$ 1 (but stops at l=358)
+    \item CARMA-CMZ 3 mm survey
     \item SEDIGISM, 1 mm b = $\pm$ 1 
     \item 217-221 GHz APEX CMZ \url{https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/27601} and \url{https://github.com/adamginsburg/APEX_CMZ_H2CO}
     \item 1.1 mm BGPS \url{http://milkyway.colorado.edu/bgps/}
