--- a/section_Summary_of_existing_and__.tex
+++ b/section_Summary_of_existing_and__.tex
@@ -12,6 +12,9 @@ Sorted from low to high frequency.  Probably should be a table.
     \item 0.8 cm / 36 GHz \citep{Yusef-Zadeh2013a}
     \item 42-50 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/survey.html#CMZ_7mm_Table} \citep{Jones2013}
     \item 90-115 GHz MOPRA CMZ \url{http://newt.phys.unsw.edu.au/mopracmz/} \citep{Jones2012a}
+    \item PMO has been running a large scale CO/\cob/\coc\ (1--0) mapping survey, the
+    Milky Way Imaging Scroll Painting (MWISP, \citealt{Jiang2013-MWISP})
+    which will eventually map the northern Galactic plane within $b<|5|^\circ$. The project started in 2010 and so far a large fraction of plane has been observed. Progress can be found at \url{http://www.radioast.nsdc.cn/viewallobsed.php}.
     \item THRUMMS, 3 mm b = $\pm$ 1 (but stops at l=358)
     \item CARMA-CMZ 3 mm survey
     \item SEDIGISM, 1 mm b = $\pm$ 1 
